--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ name: post-meridian-agency_backend
 services:
   django:
     command:
-#      - sh
-#      - -c
-#      - |
-#        python -m venv .env
-#        . .env/bin/activate
-#        pip install --upgrade pip
-#        pip install -r requirements.txt
-#        python mysite/manage.py runserver 127.0.0.1:8000
+      - sh
+      - -c
+      - |
+        python -m venv .env
+        . .env/bin/activate
+        pip install --upgrade pip
+        pip install -r requirements.txt
+        python mysite/manage.py runserver 127.0.0.1:8000
     image: python:3.11.5-alpine
     ports:
       - 8000:8000
